--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "commit": "czg"
+    "commit": "git add . &&  czg"
   },
   "dependencies": {
     "antd": "^5.16.2",
