--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,11 @@
+###
+ # @Author: yjl
+ # @Date: 2024-04-22 14:07:49
+ # @LastEditors: yjl
+ # @LastEditTime: 2024-04-30 12:28:20
+ # @Description: 描述
+### 
 ENV="development"
 
 VITE_APP_TITLE="阿猹的React"
+VITE_APP_BASE_URL="https://game.gtimg.cn/images/lol/"
