--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "commit": "git add . &&  czg"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.2",
     "axios": "^1.6.8",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "unocss": "^0.59.3"
   },
@@ -32,6 +34,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-mock": "^2.9.6"
