--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "commit": "git add . &&  czg"
+    "commit": "git add . &&  czg",
+    "preview:dist": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
