--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,11 @@
  # @Author: yjl
  # @Date: 2024-04-22 14:07:49
  # @LastEditors: yjl
- # @LastEditTime: 2024-04-30 12:28:20
+ # @LastEditTime: 2024-07-02 16:56:31
  # @Description: 描述
 ### 
 ENV="development"
 
 VITE_APP_TITLE="阿猹的React"
 VITE_APP_BASE_URL="https://game.gtimg.cn/images/lol/"
+VITE_APP_TC_URL="https://game.gtimg.cn/images/lol/act/img/tft/"
