--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
  # @Author: yjl
  # @Date: 2024-06-27 13:28:01
  # @LastEditors: yjl
- # @LastEditTime: 2024-06-27 13:28:44
+ # @LastEditTime: 2024-07-02 16:56:25
  # @Description: 描述
 ### 
 
@@ -11,3 +11,4 @@ ENV="production"
 
 VITE_APP_TITLE="阿猹的React"
 VITE_APP_BASE_URL="https://game.gtimg.cn/images/lol/"
+VITE_APP_TC_URL="https://game.gtimg.cn/images/lol/act/img/tft/"
